--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
 @import "modules/_main.scss";
 @import "modules/_header.scss";
-@import "modules/generalStyles.scss";
-@import "modules/grid.scss";
+@import "modules/_generalStyles.scss";
+@import "modules/_grid.scss";
+@import "modules/_cards.scss";
+@import "modules/_text.scss";
+@import "modules/_lightbox.scss";
