--- a/sass/modules/_cards.scss
+++ b/sass/modules/_cards.scss
@@ -1,18 +1,3 @@
-#candH {
-background-size: cover;
-background-position: center;
-}
-
-#sciFi {
-background-size: cover;
-background-position: center;
-}
-
-#jackBlack {
-background-size: cover;
-background-position: center;
-}
-
 .card{
     // background-color: black;
     // opacity: 80%;
@@ -46,15 +31,15 @@ background-position: center;
 }
 
 .container {
-display: grid;
-grid-template-rows: auto;
-background-color: rgb(215, 215, 215);
+    display: grid;
+    grid-template-rows: auto;
+    background-color: rgb(215, 215, 215);
 
-width: 100%;
-border-radius: 1em;
-transition: .25s;
-text-align: center;
-vertical-align: middle;
+    width: 100%;
+    border-radius: 1em;
+    transition: .25s;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .container:hover {
@@ -74,6 +59,12 @@ vertical-align: middle;
 
 .cardText {
     display: flex;
+}
+
+.infoBox {
+    padding: 2em 0em 2em 0em;
+    border-radius: 1em;
+    background-color: rgb(201, 201, 201);
 }
 
 .blur {
