--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -6,6 +6,7 @@
     top: 0;
     justify-content: start;
     background-color: white;
+    backdrop-filter: drop-shadow(4px 4px 1em black);
 }
 
 .header img {
